<resources>
    <!-- Other string resources-->
    <string name="app_name">GithubUsers</string>
    <string name="detail">DETAIL</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="not_found">User Not Found</string>
    <string name="search_hint">Search by username</string>
    <string name="connection_unavailable">Connection failed</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="location_icon">Location Icon</string>
    <string name="company_icon">Company Icon</string>
    <string name="repository_icon">Repository Icon</string>
    <string name="followers_profile_picture">Profile Picture</string>
    <string name="language_setting">Language Setting</string>
    <string name="repos">Repository</string>
    <string name="favorite_user">Favorite User</string>
    <string name="delete_favorite">Delete favorite</string>
    <string name="delete_dialog">Are you sure to delete this item from favorite?</string>
    <string name="add_favorite">%1$s added to favorite</string>
    <string name="detail_fav">Detail</string>
    <string name="setting">Setting</string>
    <string name="reminder_added">Reminder Added</string>
    <string name="reminder_deleted">Reminder Deleted</string>
    <string name="message">Find your favorite people in github</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="favorite_image_banner">Favorite Image Banner</string>
    <string name="no_data">No Data</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>

</resources>


